* border-box, fixes for modals on small screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
@@ -88,33 +92,33 @@ hr {
   }
 }
 
-.modal {
+.modal-container {
   position: fixed;
+  z-index: 998;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
   z-index: 999;
-  top: 50%;
-  left: 50%;
   display: flex;
   width: 380px;
+  max-width: 100%;
   min-height: 200px;
+  max-height: 100%;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
   padding: 20px 30px;
   border-radius: 15px;
   background: #222;
-  transform: translate(-50%, -50%);
-
-  &:before {
-    position: absolute;
-    z-index: -1;
-    top: 50%;
-    left: 50%;
-    width: 100vw;
-    height: 100vh;
-    background: #00000068;
-    content: "";
-    transform: translate(-50%, -50%);
-  }
+  overflow-y: scroll;
 
   h2 {
     margin-top: 0;
@@ -130,52 +134,6 @@ hr {
 
     &:before {
       content: "×";
-    }
-  }
-
-  .tab-select {
-    display: flex;
-    width: 100%;
-    align-items: start;
-
-    button {
-      padding: 0.75rem 1rem;
-      border: none;
-      margin-bottom: -2px;
-      background: none;
-
-      &.active {
-        background: #333;
-      }
-    }
-  }
-
-  .tab-content {
-    display: flex;
-    width: 100%;
-    min-height: 120px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem 0.5rem;
-    border-radius: 0 0 8px 8px;
-    background: #333;
-
-    a {
-      margin-bottom: 1rem;
-      color: #fff;
-      text-align: center;
-
-      &:hover {
-        color: #fff;
-      }
-    }
-
-    button {
-      display: block;
-      width: 120px;
-      border: 2px solid #fff;
-      margin: 10px auto 0;
     }
   }
 }
